# demo-it-tage-2025

./: .gitignore  APP_CONTROL.md  APP_CONTROL_RAG.md  azure.yaml  pyproject.toml
infra/: api.bicep  main.bicep
infra/core/ai/: cognitiveservices.bicep
infra/core/host/: ai-environment.bicep
scripts/: check_index_schema.py  delete_search_index.py
src/: Dockerfile  requirements.txt
src/api/: blob_storage_manager.py  document_processor.py  main.py  routes.py  search_index_manager.py
src/api/static/react/.vite/: manifest.json
src/api/templates/: index.html
src/frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/frontend/src/: global.css  main.tsx  svg.d.ts
src/frontend/src/components/: App.tsx
src/frontend/src/components/agents/: AgentIcon.tsx  AgentPreview.module.css  AgentPreview.tsx  AssistantMessage.tsx  DocumentUpload.module.css  DocumentUpload.tsx
src/frontend/src/components/agents/chatbot/: ChatInput.module.css  ChatInput.tsx
src/frontend/src/components/core/: UploadPanel.tsx
src/frontend/src/components/core/MenuButton/: MenuButton.tsx
src/frontend/src/components/core/theme/: Theme.module.css  ThemeProvider.tsx  themes.ts
tools_and_data/: .gitignore
tools_and_data/bing_search/bicep/: bing-search.bicep  cleanup-bing-search.sh  deploy-bing-search.sh
tools_and_data/bing_search/examples/: 01_bing_grounding_complete_guide.ipynb  02_deep_research_agent_complete_guide.ipynb
tools_and_data/document_intelligence/bicep/: cleanup-document-intelligence.sh  deploy-document-intelligence.sh  document-intelligence.bicep
tools_and_data/document_intelligence/examples/: 01_document_analysis.ipynb  02_prebuilt_models.ipynb  upload_sample_data.py
tools_and_data/vector_db/bicep/: cleanup-vector-search.sh  deploy-vector-search.sh  vector-search.bicep
tools_and_data/vector_db/examples/: 01_azure_ai_search_complete_guide.ipynb
tools_and_data/workshop_tools/: README.md  pyproject.toml
tools_and_data/workshop_tools/azure_tools/ai_search/: clear_index.py
tools_and_data/workshop_tools/azure_tools/blob_store/: delete_all_blobs.py  get_all_blobs.py  upload_sample_data.py
tools_and_data/workshop_tools/foundry_tools/: __init__.py  auth.py  bing_search.py  blob_storage.py  content_safety.py  document_intelligence.py  language.py  notebook_utils.py  rate_limiter.py  translator.py  vector_db.py  vector_pipeline.py  vision.py
